Cache the results.  No need to be verbose.

--- a/vignettes/OxfordPlots.Rmd
+++ b/vignettes/OxfordPlots.Rmd
@@ -13,7 +13,7 @@ editor_options:
 ---
 
 ```{r setup}
-knitr::opts_knit$set(verbose = TRUE)
+knitr::opts_knit$set(cache = TRUE)
 ```
 
 # Introduction
