Correct chunk name and therefore file name.

--- a/vignettes/OxfordPlots.Rmd
+++ b/vignettes/OxfordPlots.Rmd
@@ -133,7 +133,7 @@ seqlevels(Oki_Kum_PAR$query) <- seqlevels(Oki_Kum_PAR$query)[orderQuerySeqLevels
 Oki_Kum_PAR$query <- mergeSeqLevels(Oki_Kum_PAR$query, seqlevels(Oki_Kum_PAR$query), "PAR")
 ```
 
-```{r Osa_Kum_win, dev='svg', fig.ext='svg'}
+```{r Oki_Kum_win, dev='svg', fig.ext='svg'}
 mkOxPlotWindow(Oki_Kum_PAR)
 ```
 
