Add the names of the merged contigs on top of the plot.

--- a/vignettes/ParallelPlots.Rmd
+++ b/vignettes/ParallelPlots.Rmd
@@ -100,13 +100,25 @@ plotApairOfChrs(coa2$Osa_Bar, "Chr1", main = "Osa vs Bar (double-collapsed")
 
 Kume's `chr1` is mostly comprised of 4 large contigs.
 
+```{r Kum_chr1_contigs_to_merge}
+contigsToMerge        <- c("contig_27_1", "contig_90_1", "contig_3_1", "contig_88_1")
+contigsToMerge_start  <- c(1, cumsum(seqlengths(x$query)[contigsToMerge]))    |> unname() |> head(-1)
+contigsToMerge_end    <-     (cumsum(seqlengths(x$query)[contigsToMerge]) -1) |> unname()
+contigsToMerge_oldPos <- GRanges("chr1", IRanges(contigsToMerge_start, contigsToMerge_end))
+names(contigsToMerge_oldPos)  <- contigsToMerge
+strand(contigsToMerge_oldPos) <- c('+', '-', '+', '-')
+contigsToMerge_oldPos
+```
+
 ```{r Kum_chr1_coa, fig.width=15}
 x <- coa$Oki_Kum
 x[seqnames(x$query) == "contig_90_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_90_1"])
 x[seqnames(x$query) == "contig_88_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_88_1"])
 
-x$query <- mergeSeqLevels(x$query, c("contig_27_1", "contig_90_1", "contig_3_1", "contig_88_1"), "chr1")
-plotApairOfChrs(x, "chr1", dna_seg_scale=TRUE, main = "Oki vs Kum")
+x$query <- mergeSeqLevels(x$query, contigsToMerge, "chr1")
+annot <- genoPlotR::annotation(x1=start(contigsToMerge_oldPos), x2=end(contigsToMerge_oldPos), text=names(contigsToMerge_oldPos), rot=30)
+
+plotApairOfChrs(x |> swap(), "chr1", dna_seg_scale=TRUE, main = "Kum vs Oki", annotations = annot)
 ```
 
 ```{r Kum_chr1_coa2, fig.width=15}
@@ -114,15 +126,28 @@ x <- coa2$Oki_Kum
 x[seqnames(x$query) == "contig_90_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_90_1"])
 x[seqnames(x$query) == "contig_88_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_88_1"])
 
-x$query <- mergeSeqLevels(x$query, c("contig_27_1", "contig_90_1", "contig_3_1", "contig_88_1"), "chr1")
-plotApairOfChrs(x, "chr1", dna_seg_scale=TRUE, main = "Oki vs Kum (double-collapsed")
+x$query <- mergeSeqLevels(x$query, contigsToMerge, "chr1")
+annot <- genoPlotR::annotation(x1=start(contigsToMerge_oldPos), x2=end(contigsToMerge_oldPos), text=names(contigsToMerge_oldPos), rot=30)
+
+plotApairOfChrs(x |> swap(), "chr1", dna_seg_scale=TRUE, main = "Kum vs Oki (double-coalesced)", annotations = annot)
 ```
 
 ### Chromosome 2
 
-Chromosome 2 is mostly comprised of `contig_16_1`, `contig_24_1` on the short arm,
-and the reverse complement of `contig_79_1`, `contig_37_1`, `contig_81_1` on the
-long arm.
+Chromosome 2 is mostly comprised of `contig_16_1`, on the short arm, and
+`contig_24_1` followed by the reverse complement of `contig_79_1`,
+`contig_37_1`, `contig_81_1` on the long arm.
+
+```{r Kum_chr2_contigs_to_merge}
+contigsToMerge        <- c("contig_16_1", "contig_24_1", "contig_79_1", "contig_37_1", "contig_81_1")
+contigsToMerge_start  <- c(1, cumsum(seqlengths(x$query)[contigsToMerge]))    |> unname() |> head(-1)
+contigsToMerge_end    <-     (cumsum(seqlengths(x$query)[contigsToMerge]) -1) |> unname()
+contigsToMerge_oldPos <- GRanges("chr2", IRanges(contigsToMerge_start, contigsToMerge_end))
+names(contigsToMerge_oldPos)  <- contigsToMerge
+strand(contigsToMerge_oldPos) <- c('+', '+', '-', '-', '-')
+contigsToMerge_oldPos
+```
+
 
 ```{r Kum_chr2_coa, fig.width=15}
 x <- coa$Oki_Kum
@@ -130,8 +155,10 @@ x[seqnames(x$query) == "contig_81_1"] <- reverse(query = TRUE, x[seqnames(x$quer
 x[seqnames(x$query) == "contig_79_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_79_1"])
 x[seqnames(x$query) == "contig_37_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_37_1"])
 
-x$query <- mergeSeqLevels(x$query, c("contig_16_1", "contig_24_1", "contig_79_1", "contig_37_1", "contig_81_1"), "chr2")
-plotApairOfChrs(x, "chr2", dna_seg_scale=TRUE, main = "Oki vs Kum")
+x$query <- mergeSeqLevels(x$query, contigsToMerge, "chr2")
+annot <- genoPlotR::annotation(x1=start(contigsToMerge_oldPos), x2=end(contigsToMerge_oldPos), text=names(contigsToMerge_oldPos), rot=30)
+
+plotApairOfChrs(x |> swap(), "chr2", dna_seg_scale=TRUE, main = "Kum vs Oki", annotations = annot)
 ```
 
 ```{r Kum_chr2_coa2, fig.width=15}
@@ -140,8 +167,10 @@ x[seqnames(x$query) == "contig_81_1"] <- reverse(query = TRUE, x[seqnames(x$quer
 x[seqnames(x$query) == "contig_79_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_79_1"])
 x[seqnames(x$query) == "contig_37_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_37_1"])
 
-x$query <- mergeSeqLevels(x$query, c("contig_16_1", "contig_24_1", "contig_79_1", "contig_37_1", "contig_81_1"), "chr2")
-plotApairOfChrs(x, "chr2", dna_seg_scale=TRUE, main = "Oki vs Kum")
+x$query <- mergeSeqLevels(x$query, contigsToMerge, "chr2")
+annot <- genoPlotR::annotation(x1=start(contigsToMerge_oldPos), x2=end(contigsToMerge_oldPos), text=names(contigsToMerge_oldPos), rot=30)
+
+plotApairOfChrs(x |> swap(), "chr2", dna_seg_scale=TRUE, main = "Kum vs Oki (double-collapsed)", annotations = annot)
 ```
 
 
