--- a/vignettes/ParallelPlots.Rmd
+++ b/vignettes/ParallelPlots.Rmd
@@ -170,67 +170,56 @@ plotApairOfChrs(x |> swap(), "chr2", dna_seg_scale=TRUE, main = "Kum vs Oki", an
 #### Plot with double-coalesced objects
 
 ```{r Kum_chr2_coa2, fig.width=15}
-x <- coa2$Oki_Kum
-x[seqnames(x$query) == "contig_36_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_36_1"])
-x[seqnames(x$query) == "contig_81_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_81_1"])
-x[seqnames(x$query) == "contig_79_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_79_1"])
-x[seqnames(x$query) == "contig_37_1"] <- reverse(query = TRUE, x[seqnames(x$query) == "contig_37_1"])
+KumChr2 <- coa2$Oki_Kum
+KumChr2[seqnames(KumChr2$query) == "contig_36_1"] <- reverse(query = TRUE, KumChr2[seqnames(KumChr2$query) == "contig_36_1"])
+KumChr2[seqnames(KumChr2$query) == "contig_81_1"] <- reverse(query = TRUE, KumChr2[seqnames(KumChr2$query) == "contig_81_1"])
+KumChr2[seqnames(KumChr2$query) == "contig_79_1"] <- reverse(query = TRUE, KumChr2[seqnames(KumChr2$query) == "contig_79_1"])
+KumChr2[seqnames(KumChr2$query) == "contig_37_1"] <- reverse(query = TRUE, KumChr2[seqnames(KumChr2$query) == "contig_37_1"])
 
-x$query <- mergeSeqLevels(x$query, contigsToMerge, "chr2")
+KumChr2$query <- mergeSeqLevels(KumChr2$query, contigsToMerge, "chr2")
 annot <- genoPlotR::annotation(x1=start(contigsToMerge_oldPos), x2=end(contigsToMerge_oldPos), text=names(contigsToMerge_oldPos), rot=30)
 
-plotApairOfChrs(x |> swap(), "chr2", dna_seg_scale=TRUE, main = "Kum vs Oki (double-collapsed)", annotations = annot)
+plotApairOfChrs(KumChr2 |> swap(), "chr2", dna_seg_scale=TRUE, main = "Kum vs Oki (double-collapsed)", annotations = annot)
 ```
 
 
-## Plot chr1 in three species
+## Plot chr2 in three species
+
+We chose chr2 because it has _Hox4_.
 
 ```{r plot_intersect_GBs_with_tree, fig.width=15}
-doubleSubset <- function(gb, a, b) {
-  gb <- gb[seqnames(gb) == a]
-  gb <- gb[seqnames(gb$query) == b]
-  gb
-}
-
 dsList <-   list(
-    OKI = doubleSubset(coa$Oki_Osa, "chr1", "Chr1") |> gr2dna_seg(),
-    OSA = doubleSubset(coa$Osa_Bar, "Chr1", "Chr1") |> gr2dna_seg(),
-    BAR = doubleSubset(coa$Bar_Osa, "Chr1", "Chr1") |> gr2dna_seg()
+    OKI = coa$Oki_Osa |> plyranges::filter(seqnames == 'chr2', seqnames(query) == 'Chr2') |> gr2dna_seg(),
+    OSA = coa$Osa_Bar |> plyranges::filter(seqnames == 'Chr2', seqnames(query) == 'Chr2') |> gr2dna_seg(),
+    BAR = coa$Bar_Osa |> plyranges::filter(seqnames == 'Chr2', seqnames(query) == 'Chr2') |> gr2dna_seg()
 )
 
 compList <- list(
-    doubleSubset(coa$Oki_Osa, "chr1", "Chr1") |> gb2comp(),
-    Osa_Bar = doubleSubset(coa$Osa_Bar, "Chr1", "Chr1") |> gb2comp()
+    coa$Oki_Osa |> plyranges::filter(seqnames == 'chr2', seqnames(query) == 'Chr2') |> gb2comp(),
+    Osa_Bar = coa$Osa_Bar |> plyranges::filter(seqnames == 'Chr2', seqnames(query) == 'Chr2') |> gb2comp()
   )
 
 genoPlotR::plot_gene_map(dsList, compList, dna_seg_scale=TRUE, tree=ade4::newick2phylog(addRoot(treeNode("OKI", treeNode("OSA", "BAR")))),
-                         main = "Chromosome 1 in three Oikopleura genome assemblies")
+                         main = "Chromosome 2 in three Oikopleura genome assemblies")
 ```
 
-## Plot chr1 in four species (double-collapsed)
+## Plot chr2 in four species (double-collapsed)
 
 ```{r plot_intersect_GBs_with_tree_with_Kume, fig.width=15, fig.height=8, dev="svg", fig.ext="svg"}
-KumChr1 <-coa2$Oki_Kum
-KumChr1[seqnames(KumChr1$query) == "contig_90_1"] <- reverse(query = TRUE, KumChr1[seqnames(KumChr1$query) == "contig_90_1"])
-KumChr1[seqnames(KumChr1$query) == "contig_88_1"] <- reverse(query = TRUE, KumChr1[seqnames(KumChr1$query) == "contig_88_1"])
-KumChr1$query <- mergeSeqLevels(KumChr1$query, c("contig_27_1", "contig_90_1", "contig_3_1", "contig_88_1"), "Chr1")
-
-dsList <- list(
-    KUM = doubleSubset(KumChr1,     "chr1", "Chr1") |> gr2dna_seg(),
-    OKI = doubleSubset(coa2$Oki_Osa, "chr1", "Chr1") |> gr2dna_seg(),
-    OSA = doubleSubset(coa2$Osa_Bar, "Chr1", "Chr1") |> gr2dna_seg(),
-    BAR = doubleSubset(coa2$Bar_Osa, "Chr1", "Chr1") |> gr2dna_seg()
+dsList4 <- c(
+    list(KUM = KumChr2 |> plyranges::filter(seqnames == 'chr2', seqnames(query) == 'chr2') |> gr2dna_seg()),
+    dsList
 )
 
-compList <- list(
-    Oki_Kum = doubleSubset(KumChr1,     "chr1", "Chr1") |> gb2comp(),
-    Oki_Osa = doubleSubset(coa2$Oki_Osa, "chr1", "Chr1") |> gb2comp(),
-    Osa_Bar = doubleSubset(coa2$Osa_Bar, "Chr1", "Chr1") |> gb2comp()
+compList4 <- list(
+    Oki_Kum = KumChr2 |> plyranges::filter(seqnames == 'chr2', seqnames(query) == 'chr2') |> gb2comp(),
+    Oki_Osa = compList[[1]],
+    Osa_Bar = compList[["Osa_Bar"]]
   )
 
-genoPlotR::plot_gene_map(dsList, compList, dna_seg_scale = TRUE,
+genoPlotR::plot_gene_map(dsList4, compList4, dna_seg_scale = FALSE,
                          tree = ade4::newick2phylog(addRoot(treeNode(treeNode("OKI", "KUM"), treeNode("OSA", "BAR")))),
-                         main = "Chromosome 1 in four Oikopleura genome assemblies")
+                         main = "Chromosome 2 in four Oikopleura genome assemblies")
 ```
 
 ## Region that is conserved between Osaka and Barcelona
