--- a/vignettes/ParallelPlots.Rmd
+++ b/vignettes/ParallelPlots.Rmd
@@ -235,8 +235,12 @@ y <- subsetByOverlaps(coa2$Oki_Bar, granges(coa2$Oki_Osa)) |> subset(width > 1e5
 findOverlapPairs(x,y)
 subsetByOverlaps(coa2$Oki_Osa, gaps(coa2$Oki_Bar)) |> subset(width > 1e5)
 
-a <- coa$Oki_Osa |> subsetByOverlaps(GRanges("chr2:10000000-11000000")) |> plyranges::filter(seqnames == 'chr2', seqnames(query) == 'Chr2')
-b <- coa$Oki_Bar |> subsetByOverlaps(GRanges("chr2:10000000-11000000")) |> plyranges::filter(seqnames == 'chr2', seqnames(query) == 'Chr2')
+ROI <- GRanges("chr2:4686018-4687168")   + 1e4 # Hox4
+ROI <- GRanges("chr2:14331701-14339427") + 1e4 #Hox1
+ROI <- GRanges("chr2:10000000-11000000")
+
+a <- coa$Oki_Osa |> subsetByOverlaps(ROI) |> plyranges::filter(seqnames == 'chr2', seqnames(query) == 'Chr2')
+b <- coa$Oki_Bar |> subsetByOverlaps(ROI) |> plyranges::filter(seqnames == 'chr2', seqnames(query) == 'Chr2')
 c <- coa$Bar_Osa |> subsetByOverlaps(range(b$query))                    |> plyranges::filter(seqnames == 'Chr2', seqnames(query) == 'Chr2')
 
 dsList <- list(
